# summer-year1-tutorials

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
summer-year1-tutorials/modules/: exercise_1.5.py  exercise_2.2.py
summer_year1_tutorials/: logger.py
summer_year1_tutorials/modules/: chunk_text.py  exercise_1.5.py  exercise_2.1.py  genbank_style.py  transcribe_DNA_to_RNA.py  translate_DNA_to_protein.py
summer_year1_tutorials/utils/: dna_integrity_check.py
tests/: test_chunk_text.py  test_dna_integrity_check.py  test_genbank_style.py  test_transcribe_DNA_to_RNA.py  test_translate_DNA_to_protein.py
